--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "npx prisma migrate dev && npx prisma generate"
+    "postinstall": "npx prisma migrate dev && npx prisma generate",
+    "prepare": "husky"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -56,6 +57,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.1.4",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "source-map-support": "^0.5.21",
